[package]
name = "image-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
tide = "0.16.0"
tokio = { version = "1.35.1", features = ["full"] }
